[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug-trace-execution = []

[dependencies]
thiserror = "1.0.38"
losk-core = { path = "../losk-core" }
phf = { version = "0.11.1", features = ["macros"] }
intrusive-collections = "0.9.4"
array-init = "2.1.0"
ahash = "0.8.2"

[dev-dependencies]
criterion = "0.4.0"
walkdir = "2.3.2"

[[bench]]
name = "fib"
harness = false