[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug-trace-execution = []

[dependencies]
thiserror = "1.0.38"
losk-core = { path = "../losk-core" }
phf = { version = "0.11.1", features = ["macros"] }
array-init = "2.1.0"
ahash = "0.8.2"
intrusive-collections = "0.9.4"
nohash = "0.2.0"

[dev-dependencies]
criterion = "0.4.0"
walkdir = "2.3.2"

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "binary_trees"
harness = false

[[bench]]
name = "equality"
harness = false

[[bench]]
name = "instantiation"
harness = false

[[bench]]
name = "invocation"
harness = false

[[bench]]
name = "method_call"
harness = false

[[bench]]
name = "properties"
harness = false

[[bench]]
name = "trees"
harness = false

[[bench]]
name = "zoo"
harness = false